--- a/scripts/core/config/base_diffusion_qwen_image.yaml
+++ b/scripts/core/config/base_diffusion_qwen_image.yaml
@@ -7,8 +7,8 @@ config:
     device: cuda
     network:
       type: lora
-      linear: 64
-      linear_alpha: 64
+      linear: 32
+      linear_alpha: 32
     save:
       dtype: bf16
       save_every: 250
@@ -18,11 +18,11 @@ config:
     - folder_path: /dataset/images
       caption_ext: txt
       cache_latents_to_disk: true
-      resolution: [256, 512, 768]
+      resolution: [512, 768]
       is_reg: false
     train:
       batch_size: 1
-      steps: 1000
+      steps: 2500
       lr: 0.0001
       optimizer: adamw8bit
       gradient_checkpointing: true
@@ -42,7 +42,7 @@ config:
       name_or_path: /cache/models
       arch: qwen_image
       quantize: true
-      qtype: float8
+      qtype: uint3|/cache/hf_cache/qwen_image_torchao_uint3.safetensors
       quantize_te: true
       qtype_te: qfloat8
       low_vram: true
